fix: prevent test name overflow

--- a/packages/web-awesome/src/components/TestResult/TrInfo/styles.scss
+++ b/packages/web-awesome/src/components/TestResult/TrInfo/styles.scss
@@ -34,6 +34,7 @@
 
 .test-result-name {
   margin-bottom: 8px;
+  word-break: break-word;
 }
 
 .test-result-duration {
